--- a/main.html
+++ b/main.html
@@ -31,31 +31,35 @@
 	Answer: Block
 </div>
 <div>
-	<input data-ns-test="block-inline-input">Test 1</input>
-	<input data-ns-test="block-inline-input">Test 2</input>
+	<input data-ns-test="block-inline-input">
+	<input data-ns-test="block-inline-input">
 	Answer: Inline
 </div>
-<div>
+	<div>
 	<cite data-ns-test="block-inline-cite">Test 1</cite>
 	<cite data-ns-test="block-inline-cite">Test 2</cite>
 	Answer: Inline
 </div>
-<div>
+	<div>
 	<code data-ns-test="block-inline-code">Test 1</code>
 	<code data-ns-test="block-inline-code">Test 2</code>
 	Answer: Inline
 </div>
-<div>
+	<div>
 	<h1 data-ns-test="block-inline-h1">Test 1</h1>
 	<h1 data-ns-test="block-inline-h1">Test 2</h1>
 	Answer: Block
 </div>
-<div>
+
+</div>
+	<div>
 	<sup data-ns-test="block-inline-sup">Test 1</sup>
 	<sup data-ns-test="block-inline-sup">Test 2</sup>
 	Answer: Inline
 </div>
-<div>
+
+</div>
+	<div>
 	<sub data-ns-test="block-inline-sub">Test 1</sub>
 	<sub data-ns-test="block-inline-sub">Test 2</sub>
 	Answer: Inline
